--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- icone -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
@@ -65,9 +65,101 @@
     </section>
 
     <main>
+        <h1>Restaurants</h1>
+        <div class="resto__list">
+            <article class="card__resto">
+                <div class="resto__new">Nouveau</div>
+                <a href="" class="resto__section__img">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="img__resto__pic">
+                </a>
+
+                <div class="resto__section__info">
+                    <a href="" class="resto__descrip">
+                        <h3>La palette du goût</h3>
+                        <p>Mènilmontant</p>
+                    </a>
+                    <div class="resto__heart">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
+            </article>
+
+            <article class="card__resto">
+                <div class="resto__new">Nouveau</div>
+                <a href="" class="resto__section__img">
+                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="img__resto__pic">
+                </a>
+
+                <div class="resto__section__info">
+                    <a href="" class="resto__descrip">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                    </a>
+                    <div class="resto__heart">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
+            </article>
+
+            <article class="card__resto">
+                <div class="resto__new">Nouveau</div>
+                <a href="" class="resto__section__img">
+                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="img__resto__pic">
+                </a>
+
+                <div class="resto__section__info">
+                    <a href="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="resto__descrip">
+                        <h3>À la française</h3>
+                        <p>Cité Rouge</p>
+                    </a>
+                    <div class="resto__heart">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
+            </article>
+
+            <article class="card__resto">
+                <div class="resto__new">Nouveau</div>
+                <a href="" class="resto__section__img">
+                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="img__resto__pic">
+                </a>
+
+                <div class="resto__section__info">
+                    <a href="" class="resto__descrip">
+                        <h3>Le délice des sens</h3>
+                        <p>Cité Rouge</p>
+                    </a>
+                    <div class="resto__heart">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
+            </article>
+
+        </div>
     </main>
 
-    <footer></footer>
+    <footer>
+        <h4 class="footer__logo">ohmyfood</h4>
+        <div class="footer__list">
+            <div class="footer__element">
+                <i class="fas fa-utensils footer__element__logo"></i>
+                <p class="footer__element__name">Proposer un restaurant</p>
+            </div>
+
+            <div class="footer__element">
+                <i class="fas fa-hands-helping footer__element__logo"></i>
+                <p class="footer__element__name">Devenir partenaire</p>
+            </div>
+
+            <div class="footer__element">
+                <p class="footer__element__name">Mentions légales</p>
+            </div>
+
+            <div class="footer__element">
+                <p class="footer__element__name">Contact</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
