depot du site avec animation sur toutes les pages

--- a/pages/menilmontant.html
+++ b/pages/menilmontant.html
@@ -36,14 +36,17 @@
         <div class="contentMenu">
             <div class="resto__title">
                 <h1 class="resto__name">La palette du goût</h1>
-                <i class="far fa-heart"></i>
+                <div class="resto__heart"> 
+                    <i class="fas fa-heart heart__full"></i>
+                    <i class="far fa-heart heart__empty"></i>
+                </div>
             </div>
 
             <!-- entrees/plats/desserts -->
             <section class="menus">
 
                 <!-- entrées -->
-                <article>
+                <article class="menu__entrees">
                     <div class="article__title">
                         <h2 class="article__name">ENTRÉES</h2>
                         <div class="article__underlign"></div>
@@ -107,7 +110,7 @@
 
                 </article>
                 <!-- plats -->
-                <article>
+                <article class="menu__plats">
                     <div class="article__title">
                         <h2 class="article__name">PLATS</h2>
                         <div class="article__underlign"></div>
@@ -168,7 +171,7 @@
 
                 </article>
                 <!-- desserts -->
-                <article>
+                <article class="menu__desserts">
                     <div class="article__title">
                         <h2 class="article__name">DESSERTS</h2>
                         <div class="article__underlign"></div>
