--- a/index.html
+++ b/index.html
@@ -29,164 +29,172 @@
             </div>
         </div>
     </div>
+
     <!-- contenu de la page -->
     <div class="content">
+
         <!-- Barre de navigation/logo -->
-    <nav>
-        <img src="images/ohmyfood.png" alt="" class="nav__img">
-    </nav>
+        <nav>
+            <img src="images/ohmyfood.png" alt="" class="nav__img">
+        </nav>
 
-    <!-- header: localisation restaurants -->
-    <header>
-        <div class="location">
-            <i class="fas fa-map-marker-alt location__logo"></i>
-            <h3 class="location__city">Paris, Belleville</h3>
-        </div>
-    </header>
-
-    <!-- Exploration des restaurants  -->
-    <section>
-        <div class="exploration">
-            <h1 class="exploration__title">Réservez le menu qui vous convient</h1>
-            <p class="exploration__description">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <button class="btn exploration__btn">Explorer nos restaurants</button>
-        </div>
-    </section>
-
-    <!-- Fonctionnement du site -->
-    <section class="function">
-        <h1 class="function__headtitle">Fonctionnement</h1>
-        <div class="function__list">
-            <div class="function__step">
-                <p class="function__number">1</p>
-                <i class="fas fa-mobile-alt function__logo"></i>
-                <h2 class="function__title">Choisisez un restaurant</h2>
+        <!-- header: localisation restaurants -->
+        <header>
+            <div class="location">
+                <i class="fas fa-map-marker-alt location__logo"></i>
+                <h3 class="location__city">Paris, Belleville</h3>
             </div>
+        </header>
 
-            <div class="function__step">
-                <p class="function__number">2</p>
-                <i class="fas fa-list-ul function__logo"></i>
-                <h2 class="function__title">Composez votre menu</h2>
+        <!-- Exploration des restaurants  -->
+        <section>
+            <div class="exploration">
+                <h1 class="exploration__title">Réservez le menu qui vous convient</h1>
+                <p class="exploration__description">Découvrez des restaurants d'exception, séléctionnés par nos soins.
+                </p>
+                <button class="btn exploration__btn">Explorer nos restaurants</button>
             </div>
+        </section>
 
-            <div class="function__step function__select">
-                <p class="function__number">3</p>
-                <i class="fas fa-store function__logo function__logo__select"></i>
-                <h2 class="function__title ">Dégustez au restaurant</h2>
-            </div>
-        </div>
-    </section>
-
-    <!-- Liste des restaurants -->
-    <main>
-        <h1>Restaurants</h1>
-        <div class="resto__list">
-
-            <div href="#" class="card__resto">
-                <div class="resto__new">Nouveau</div>
-                <a href="">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""
-                        class="img__resto__pic">
-                </a>
-                <div class="resto__section__info">
-                    <div href="" class="resto__descrip">
-                        <h3>La palette du goût</h3>
-                        <p>Mènilmontant</p>
-                    </div>
-                    <div class="resto__heart">
-                        <i class="far fa-heart"></i>
-                    </div>
+        <!-- Fonctionnement du site -->
+        <section class="function">
+            <h1 class="function__headtitle">Fonctionnement</h1>
+            <div class="function__list">
+                <div class="function__step">
+                    <p class="function__number">1</p>
+                    <i class="fas fa-mobile-alt function__logo"></i>
+                    <h2 class="function__title">Choisisez un restaurant</h2>
                 </div>
 
-
-
-
-            </div>
-
-            <div href="#" class="card__resto">
-                <div class="resto__new">Nouveau</div>
-                <a href="">
-                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="img__resto__pic">
-                </a>
-                <div class="resto__section__info">
-                    <div href="" class="resto__descrip">
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
-                    </div>
-                    <div class="resto__heart">
-                        <i class="far fa-heart"></i>
-                    </div>
+                <div class="function__step">
+                    <p class="function__number">2</p>
+                    <i class="fas fa-list-ul function__logo"></i>
+                    <h2 class="function__title">Composez votre menu</h2>
                 </div>
 
-
+                <div class="function__step function__select">
+                    <p class="function__number">3</p>
+                    <i class="fas fa-store function__logo function__logo__select"></i>
+                    <h2 class="function__title ">Dégustez au restaurant</h2>
+                </div>
             </div>
+        </section>
 
-            <div href="#" class="card__resto">
-                <div class="resto__new">Nouveau</div>
-                <a href="">
-                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="img__resto__pic">
-                </a>
-                <div class="resto__section__info">
-                    <div href="" class="resto__descrip">
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
+        <!-- Liste des restaurants -->
+        <main>
+            <h1>Restaurants</h1>
+            <div class="resto__list">
+
+                <div href="#" class="card__resto">
+                    <div class="resto__new">Nouveau</div>
+                    <a href="pages/menilmontant.html">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""
+                            class="img__resto__pic">
+                    </a>
+                    <div class="resto__section__info">
+                        <div href="" class="resto__descrip">
+                            <h3>La palette du goût</h3>
+                            <p>Mènilmontant</p>
+                        </div>
+                        <div class="resto__heart"> 
+                            <i class="fas fa-heart heart__full"></i>
+                            <i class="far fa-heart heart__empty"></i>
+                        </div>
                     </div>
-                    <div class="resto__heart">
-                        <i class="far fa-heart"></i>
-                    </div>
+
+
+
+
                 </div>
 
-
-            </div>
-
-            <div href="#" class="card__resto">
-                <div class="resto__new">Nouveau</div>
-                <a href="">
-                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""
-                        class="img__resto__pic">
-                </a>
-                <div class="resto__section__info">
-                    <div href="" class="resto__descrip">
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
+                <div href="#" class="card__resto">
+                    <div class="resto__new">Nouveau</div>
+                    <a href="pages/charonne.html">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="img__resto__pic">
+                    </a>
+                    <div class="resto__section__info">
+                        <div href="" class="resto__descrip">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <div class="resto__heart"> 
+                            <i class="fas fa-heart heart__full"></i>
+                            <i class="far fa-heart heart__empty"></i>
+                        </div>
                     </div>
-                    <div class="resto__heart">
-                        <i class="far fa-heart"></i>
-                    </div>
+
+
                 </div>
 
+                <div href="#" class="card__resto">
+                    <div class="resto__new disable">Nouveau</div>
+                    <a href="pages/citerouge.html">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""
+                            class="img__resto__pic">
+                    </a>
+                    <div class="resto__section__info">
+                        <div href="" class="resto__descrip">
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <div class="resto__heart"> 
+                            <i class="fas fa-heart heart__full"></i>
+                            <i class="far fa-heart heart__empty"></i>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div href="#" class="card__resto">
+                    <div class="resto__new disable">Nouveau</div>
+                    <a href="pages/mericourt.html">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""
+                            class="img__resto__pic">
+                    </a>
+                    <div class="resto__section__info">
+                        <div href="" class="resto__descrip">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <div class="resto__heart"> 
+                            <i class="fas fa-heart heart__full"></i>
+                            <i class="far fa-heart heart__empty"></i>
+                        </div>
+                    </div>
+
+
+                </div>
 
             </div>
+        </main>
 
-        </div>
-    </main>
+        <!-- Bas de page -->
+        <footer>
+            <h4 class="footer__logo">ohmyfood</h4>
+            <div class="footer__list">
+                <div class="footer__element">
+                    <i class="fas fa-utensils footer__element__logo"></i>
+                    <p class="footer__element__name">Proposer un restaurant</p>
+                </div>
 
-    <!-- Bas de page -->
-    <footer>
-        <h4 class="footer__logo">ohmyfood</h4>
-        <div class="footer__list">
-            <div class="footer__element">
-                <i class="fas fa-utensils footer__element__logo"></i>
-                <p class="footer__element__name">Proposer un restaurant</p>
+                <div class="footer__element">
+                    <i class="fas fa-hands-helping footer__element__logo"></i>
+                    <p class="footer__element__name">Devenir partenaire</p>
+                </div>
+
+                <div class="footer__element">
+                    <p class="footer__element__name">Mentions légales</p>
+                </div>
+
+                <div class="footer__element">
+                    <p class="footer__element__name">Contact</p>
+                </div>
             </div>
-
-            <div class="footer__element">
-                <i class="fas fa-hands-helping footer__element__logo"></i>
-                <p class="footer__element__name">Devenir partenaire</p>
-            </div>
-
-            <div class="footer__element">
-                <p class="footer__element__name">Mentions légales</p>
-            </div>
-
-            <div class="footer__element">
-                <p class="footer__element__name">Contact</p>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
     </div>
-    
+
 </body>
 
 </html>
