--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!-- Barre de navigation/logo -->
         <nav>
-            <img src="images/ohmyfood.png" alt="" class="nav__img">
+            <img src="images/ohmyfood.png" alt="Logo ohmyfood" class="nav__img">
         </nav>
 
         <!-- header: localisation restaurants -->
@@ -49,7 +49,7 @@
         <!-- Exploration des restaurants  -->
         <section>
             <div class="exploration">
-                <h1 class="exploration__title">Réservez le menu qui vous convient</h1>
+                <h2 class="exploration__title">Réservez le menu qui vous convient</h2>
                 <p class="exploration__description">Découvrez des restaurants d'exception, séléctionnés par nos soins.
                 </p>
                 <button class="btn exploration__btn">Explorer nos restaurants</button>
@@ -58,7 +58,7 @@
 
         <!-- Fonctionnement du site -->
         <section class="function">
-            <h1 class="function__headtitle">Fonctionnement</h1>
+            <h2 class="function__headtitle">Fonctionnement</h2>
             <div class="function__list">
                 <div class="function__step">
                     <p class="function__number">1</p>
@@ -85,18 +85,17 @@
             <h1>Restaurants</h1>
             <div class="resto__list">
 
-                <div href="#" class="card__resto">
+                <div class="card__resto">
                     <div class="resto__new">Nouveau</div>
                     <a href="pages/menilmontant.html">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""
-                            class="img__resto__pic">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat du restaurant de Mènilmontant" class="img__resto__pic">
                     </a>
                     <div class="resto__section__info">
-                        <div href="" class="resto__descrip">
+                        <div class="resto__descrip">
                             <h3>La palette du goût</h3>
                             <p>Mènilmontant</p>
                         </div>
-                        <div class="resto__heart"> 
+                        <div class="resto__heart">
                             <i class="fas fa-heart heart__full"></i>
                             <i class="far fa-heart heart__empty"></i>
                         </div>
@@ -107,17 +106,17 @@
 
                 </div>
 
-                <div href="#" class="card__resto">
+                <div class="card__resto">
                     <div class="resto__new">Nouveau</div>
                     <a href="pages/charonne.html">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="img__resto__pic">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat du restaurant de Charonne" class="img__resto__pic">
                     </a>
                     <div class="resto__section__info">
-                        <div href="" class="resto__descrip">
+                        <div class="resto__descrip">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
-                        <div class="resto__heart"> 
+                        <div class="resto__heart">
                             <i class="fas fa-heart heart__full"></i>
                             <i class="far fa-heart heart__empty"></i>
                         </div>
@@ -126,18 +125,18 @@
 
                 </div>
 
-                <div href="#" class="card__resto">
+                <div class="card__resto">
                     <div class="resto__new disable">Nouveau</div>
                     <a href="pages/citerouge.html">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat du restaurant de Cité Rouge"
                             class="img__resto__pic">
                     </a>
                     <div class="resto__section__info">
-                        <div href="" class="resto__descrip">
+                        <div class="resto__descrip">
                             <h3>À la française</h3>
                             <p>Cité Rouge</p>
                         </div>
-                        <div class="resto__heart"> 
+                        <div class="resto__heart">
                             <i class="fas fa-heart heart__full"></i>
                             <i class="far fa-heart heart__empty"></i>
                         </div>
@@ -146,18 +145,18 @@
 
                 </div>
 
-                <div href="#" class="card__resto">
+                <div class="card__resto">
                     <div class="resto__new disable">Nouveau</div>
                     <a href="pages/mericourt.html">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat du restaurant de Folie-Méricourt"
                             class="img__resto__pic">
                     </a>
                     <div class="resto__section__info">
-                        <div href="" class="resto__descrip">
+                        <div class="resto__descrip">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <div class="resto__heart"> 
+                        <div class="resto__heart">
                             <i class="fas fa-heart heart__full"></i>
                             <i class="far fa-heart heart__empty"></i>
                         </div>
