--- a/pages/charonne.html
+++ b/pages/charonne.html
@@ -23,12 +23,12 @@
     <!-- navigation -->
     <nav>
         <a href="../index.html" class="nav__back"><i class="fas fa-arrow-left nav__back__arrow"></i></a>
-        <img src="../images/ohmyfood.png" alt="" class="nav__img">
+        <img src="../images/ohmyfood.png" alt="Logo ohmyfood" class="nav__img">
     </nav>
 
     <!-- image header -->
     <header>
-        <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="img__bg">
+        <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat du restaurant de Charonne" class="img__bg">
     </header>
 
     <!-- contenu principale -->
@@ -43,7 +43,7 @@
             </div>
 
             <!-- entrees/plats/desserts -->
-            <section class="menus">
+            <div class="menus">
 
                 <!-- entrées -->
                 <article class="menu__entrees">
@@ -257,7 +257,7 @@
                 </div>
 
 
-            </section>
+            </div>
         </div>
 
 
