correction: -placement titre -hover menu fonction -carte menu -contact

--- a/pages/charonne.html
+++ b/pages/charonne.html
@@ -53,6 +53,7 @@
                     </div>
 
                     <div class="menu__list">
+
                         <div class="menu__card">
                             <div class="bloc__infoPrice">
                                 <div class="menu__descrip">
@@ -282,7 +283,7 @@
             </div>
 
             <div class="footer__element">
-                <p class="footer__element__name">Contact</p>
+                <a href="mailto:ohmyfood@gmail.com" class="footer__element__name">Contact</a>
             </div>
         </div>
     </footer>
