--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 <div class="card__resto">
                     <div class="resto__new">Nouveau</div>
                     <a href="pages/menilmontant.html">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat du restaurant de Mènilmontant" class="img__resto__pic">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="Plat du restaurant de Mènilmontant" class="img__resto__pic">
                     </a>
                     <div class="resto__section__info">
                         <div class="resto__descrip">
@@ -109,7 +110,8 @@
                 <div class="card__resto">
                     <div class="resto__new">Nouveau</div>
                     <a href="pages/charonne.html">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat du restaurant de Charonne" class="img__resto__pic">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat du restaurant de Charonne"
+                            class="img__resto__pic">
                     </a>
                     <div class="resto__section__info">
                         <div class="resto__descrip">
@@ -128,8 +130,8 @@
                 <div class="card__resto">
                     <div class="resto__new disable">Nouveau</div>
                     <a href="pages/citerouge.html">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat du restaurant de Cité Rouge"
-                            class="img__resto__pic">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt="Plat du restaurant de Cité Rouge" class="img__resto__pic">
                     </a>
                     <div class="resto__section__info">
                         <div class="resto__descrip">
@@ -148,8 +150,8 @@
                 <div class="card__resto">
                     <div class="resto__new disable">Nouveau</div>
                     <a href="pages/mericourt.html">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat du restaurant de Folie-Méricourt"
-                            class="img__resto__pic">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Plat du restaurant de Folie-Méricourt" class="img__resto__pic">
                     </a>
                     <div class="resto__section__info">
                         <div class="resto__descrip">
@@ -187,7 +189,7 @@
                 </div>
 
                 <div class="footer__element">
-                    <p class="footer__element__name">Contact</p>
+                    <a href="mailto:ohmyfood@gmail.com" class="footer__element__name">Contact</a>
                 </div>
             </div>
         </footer>
