--- a/pages/mericourt.html
+++ b/pages/mericourt.html
@@ -265,7 +265,7 @@
             </div>
 
             <div class="footer__element">
-                <p class="footer__element__name">Contact</p>
+                <a href="mailto:ohmyfood@gmail.com" class="footer__element__name">Contact</a>
             </div>
         </div>
     </footer>
